--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,11 +1,12 @@
 .page {
     margin: 0 auto;
+    min-width: 1100px;
     max-width: 1440px;
     background: #FFF;
 }
 
 .header {
-    margin: 92px 50px;
+    margin: 97px 25px;
     max-width: 1340px;
     box-sizing: border-box;
     display: flex;
@@ -29,6 +30,8 @@
 
 .header__list-item {
     margin: 0;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #000;
     color: #000;
     font-family: Raleway, Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -39,6 +42,7 @@
 
 .header__list-item:first-of-type {
     list-style: none;
+    border-bottom: none;
 }
 
 .header__logo {
@@ -76,9 +80,13 @@
     line-height: 24.3px;
 }
 
+.contacts__tel, .contacts__email {
+  color: #000;
+}
+
 .content {
     margin: 0;
-    width: 100%;    
+    width: 100%;
 }
 
 .cover {
@@ -113,7 +121,7 @@
 }
 
 .overlay_type_cover {
-    padding: 165px 50px 0;
+    padding: 165px 25px 0;
 }
 
 .cover__title {
@@ -192,7 +200,7 @@
 }
 
 .lots {
-    margin: 180px 50px;
+    margin: 180px 25px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -202,7 +210,7 @@
 
 .lots__heading {
     margin: 0;
-    margin-left: 40px;
+    margin-left: 25px;
     color: #000;
     font-family: Raleway;
     font-size: 40px;
@@ -218,7 +226,7 @@
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: minmax(450px, auto);
+    grid-template-rows: 600px;
     gap: 25px;
     list-style: none;
 }
@@ -276,7 +284,7 @@
 
 .lots__look-more-link {
     margin: 0;
-    margin-left: 40px;
+    margin-left: 25px;
     color: #000;
     font-family: Raleway;
     font-size: 20px;
@@ -286,12 +294,12 @@
 }
 
 .about {
-    margin: 0 50px;
+    margin: 0 50px 0 90px;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 240px auto;
-    gap: 8px 25px;
+    gap: 8px 100px;
 }
 
 .about__logo {
@@ -323,7 +331,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 20px;
 }
 
 .about__text {
@@ -338,12 +346,12 @@
 
 .footer {
     margin: 0;
-    padding: 180px 50px 90px;
+    padding: 170px 25px 90px;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 240px auto 240px;
     gap: 50px;
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
 .footer__list {
